# nativehook

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/nativehook/: ExampleInstrumentedTest.java
app/src/main/cpp/: CMakeLists.txt  hacker.cpp  hookee.cpp  native-lib.cpp
app/src/main/java/com/example/nativehook/: MainActivity.java  MyCustomApplication.java  NativeHacker.java  NativeHookee.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
plthook/: build.gradle.kts
plthook/src/androidTest/java/com/example/plthook/: ExampleInstrumentedTest.java
plthook/src/main/cpp/: CMakeLists.txt  bh_cfi.cpp  bh_cfi.h  bh_const.h  bh_core.cpp  bh_core.h  bh_dl.cpp  bh_dl.h  bh_dl_iterate.cpp  bh_dl_iterate.h  bh_dl_monitor.cpp  bh_dl_monitor.h  bh_elf.cpp  bh_elf.h  bh_elf_manager.cpp  bh_elf_manager.h  bh_hook.cpp  bh_hook.h  bh_hook_manager.cpp  bh_hook_manager.h  bh_linker.cpp  bh_linker.h  bh_linker_mutex.cpp  bh_linker_mutex.h  bh_log.cpp  bh_log.h  bh_recorder.cpp  bh_recorder.h  bh_sleb128.cpp  bh_sleb128.h  bh_task.cpp  bh_task.h  bh_task_manager.cpp  bh_task_manager.h  bh_trampo.cpp  bh_trampo.h  bh_trampo_arm.cpp  bh_trampo_arm64.cpp  bh_trampo_x86.cpp  bh_trampo_x86_64.cpp  (+6 more)
plthook/src/main/cpp/include/: plthook.h
plthook/src/main/java/com/example/plthook/: ILibLoader.java  PLTHook.java
plthook/src/test/java/com/example/plthook/: ExampleUnitTest.java
shadowhook/: build.gradle.kts
shadowhook/src/androidTest/java/com/example/shadowhook/: ExampleInstrumentedTest.java
shadowhook/src/main/cpp/: CMakeLists.txt  sh_enter.cpp  sh_enter.h  sh_exit.cpp  sh_exit.h  sh_hub.cpp  sh_hub.h  sh_jni.cpp  sh_linker.cpp  sh_linker.h  sh_safe.cpp  sh_safe.h  shadowhook.cpp
shadowhook/src/main/cpp/arch/arm/: sh_a32.cpp  sh_a32.h  sh_inst.cpp  sh_inst.h  sh_t16.cpp  sh_t16.h  sh_t32.cpp  sh_t32.h  sh_txx.cpp  sh_txx.h
shadowhook/src/main/cpp/arch/arm64/: sh_a64.cpp  sh_a64.h  sh_inst.cpp  sh_inst.h
shadowhook/src/main/cpp/common/: bytesig.cpp  bytesig.h  sh_config.h  sh_errno.cpp  sh_errno.h  sh_log.cpp  sh_log.h  sh_sig.h  sh_trampo.cpp  sh_trampo.h  sh_util.cpp  sh_util.h
shadowhook/src/main/cpp/include/: shadowhook.h
(+3 files in other folders)
